--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Curso de node.js de escalab",
   "main": "src/index.js",
   "scripts": {
-    "service": "node src/index.js"
+    "service": "node src/index.js",
+    "http": "nodemon src/httpExample/index.js"
   },
   "author": "oscargm",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.19"
+  }
 }
