--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "service": "node -r dotenv/config src/index.js",
+    "express": "nodemon -r dotenv/config src/expressExample/index.js",
     "http": "nodemon -r dotenv/config src/httpExample/index.js"
   },
   "author": "oscargm",
@@ -12,5 +13,9 @@
   "devDependencies": {
     "dotenv": "^16.0.1",
     "nodemon": "^2.0.19"
+  },
+  "dependencies": {
+    "express": "^4.18.1",
+    "morgan": "^1.10.0"
   }
 }
